# cpp2_agh-labs

./: README.md
01/: CMakeLists.txt  Main.cpp
01/include/: Complex.h
01/src/: Complex.cpp
02/: CMakeLists.txt  Main.cpp
02/include/: ListInspector.h  NegList.h
02/src/: ListInspector.cpp  NegList.cpp  NegList_append.cpp  NegList_index.cpp  NegList_pop.cpp
03/: Main.cpp
03/src/: IntProcessor.cpp
04/: CMakeLists.txt  Main.cpp
04/include/: IntProcessor.h  Pokemon.h  Team.h  Trainer.h
04/src/: Pokemon.cpp  Team.cpp  Trainer.cpp
05/: Main.cpp
05/include/: Animal.h  Lion.h  Monkey.h  Zoo.h  ZooKeeper.h
05/src/: Zoo.cpp
06-07/include/: Elephant.h  Lion.h  Monkey.h
06-07/src/: Zoo.cpp  ZooKeeper.cpp
09/: CMakeLists.txt  Main.cpp
09/include/: FSItem.h  File.h  ScriptFile.h
12/: CMakeLists.txt  Main.cpp
12/include/: Describe.hpp
13/: Main.cpp
13/include/: Formatter.hpp
14/: Main.cpp
14/include/: better_vector.hpp
exam/: 2010_1_1.cpp  2017_1_2.cpp  2021_1_1.cpp  2021_1_2.cpp  2021_2_1.cpp  2021_2_2.cpp  2022_1_2.cpp  2022_2_1.cpp  2022_2_2.cpp  2024_2_1.cpp  2024_2_2.cpp  task1.cpp
